--- a/.env.example
+++ b/.env.example
@@ -24,9 +24,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=tryy
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=IcecreamInventory
+DB_USERNAME=postgres
+DB_PASSWORD=122820
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
