--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "@headlessui/vue": "^1.7.23"
+        "@headlessui/vue": "^1.7.23",
+        "lodash": "^4.17.21",
+        "lucide-vue-next": "^0.468.0"
     }
 }
